<resources>
<string name="description">Torrent client manager with integrated search, RSS support and monitoring widget</string>
<string name="no_settings_short">Open the settings menu to enter your server daemon details.</string>
<string name="no_settings">New to Transdroid? You can get install help at www.transdroid.org/download\n\nTo start torrenting, please enter your server settings:</string>
<string name="no_settings_button">Open settings</string>
<string name="connecting">Trying to connect to the server...</string>
<string name="no_torrents">Connected, but no torrents on the server.</string>
<string name="no_downloading_torrents">Connected, but no downloading torrents on the server.</string>
<string name="no_uploading_torrents">Connected, but no seeding torrents on the server.</string>
<string name="no_inactive_torrents">Connected, but no inactive torrents on the server.</string>
<string name="no_active_torrents">Connected, but no active torrents on the server.</string>
<string name="no_file_uploads">Your torrent client does not support .torrent file uploads or this is not yet implemented.</string>
<string name="no_magnet_links">Your torrent client does not support .magnet links or this is not yet implemented.</string>
<string name="save">Save</string>
<string name="dismiss">Dismiss</string>
<string name="refresh">Refresh</string>
<string name="torrent_server">Torrent server</string>
<string name="no_servers">No servers have been configured yet</string>
<string name="reset">Reset</string>
<string name="labels_showall">All labels</string>
<string name="labels_unlabeled">Unlabeled</string>
<string name="labels_newlabel">New label</string>
<string name="labels_no_support">Setting a label is not supported by your client</string>
<string name="view_switchview">Switch view</string>
<string name="view_showall">All torrents</string>
<string name="view_showdl">Downloading torrents</string>
<string name="view_showul">Seeding torrents</string>
<string name="view_showactive">Active torrents</string>
<string name="view_showinactive">Inactive torrents</string>
<string name="menu_add">Add</string>
<string name="menu_scanbarcode">Scan barcode</string>
<string name="menu_rss">RSS</string>
<string name="menu_servers">Switch server</string>
<string name="menu_speeds">Set transfer rates</string>
<string name="menu_forall">Do for all</string>
<string name="menu_forall_pause">Pause all</string>
<string name="menu_forall_resume">Resume all</string>
<string name="menu_forall_stop">Stop all</string>
<string name="menu_forall_start">Start all</string>
<string name="menu_filter">Filter list</string>
<string name="menu_sort">Sort list</string>
<string name="menu_sort_reverse">Sort by (resort to reverse order)</string>
<string name="menu_sort_alpha">Name</string>
<string name="menu_sort_status">Status</string>
<string name="menu_sort_done">Date done</string>
<string name="menu_sort_added">Date added</string>
<string name="menu_sort_upspeed">Upload speed</string>
<string name="menu_sort_ratio">Ratio</string>
<string name="menu_sort_onlytransferring">Only transferring (> 0KB/s)</string>
<string name="menu_settings">Settings</string>
<string name="menu_changelog">About/Change log</string>
<string name="menu_errorreport">Error report</string>
<string name="menu_remove">Remove</string>
<string name="menu_remove_data">Remove and delete data</string>
<string name="menu_also_data">Also delete data</string>
<string name="menu_pause">Pause</string>
<string name="menu_resume">Resume</string>
<string name="menu_stop">Stop</string>
<string name="menu_start">Start</string>
<string name="menu_forcestart">Force start</string>
<string name="menu_setlabel">Set label</string>
<string name="menu_setdownloadlocation">Set download location</string>
<string name="menu_setfilter">Set list filter</string>
<string name="menu_set_default">Set as default</string>
<string name="menu_default_site_set_to">Default site set to</string>
<string name="menu_moveup">Move up</string>
<string name="menu_movedown">Move down</string>
<string name="menu_edittrackers">Edit trackers</string>
<string name="menu_invertselection">Invert selection</string>
<string name="menu_altmode">Turtle mode</string>
<string name="dialog_add_torrent">Paste the URL of the torrent file</string>
<string name="no_valid_url">The provided input is not a (valid) URL</string>
<string name="selectfile">Select a local .torrent file</string>
<string name="oifm_not_found">No supported file manager, such as OI File Manager, could be found. Would you like to install it from the Android Market?\n\nAlternatively, you can open an unsupported file manager yourself and send a .torrent file to Transdroid.</string>
<string name="oifm_install">Install from market</string>
<string name="oifm_nomarket">The Android Market application is not installed</string>
<string name="scanner_not_found">The Barcode Scanner could not be found. Would you like to install it from the Android Market?</string>
<string name="lc_install">To send an error report, you need the free and open-source Log Collector application. Would you like to install it from the Android Market?</string>
<string name="lc_run">The Log Collector application will now collect the device log and send it to transdroid.org@gmail.com.\nYou will have an opportunity to review and modify the data being sent.</string>
<string name="vlcremote_not_found">A remote file viewer, such as VLC Remote, could not be found. Would you like to install VLC Remote from the Android Market?</string>
<string name="ftpclient_not_found">You have not installed a compatible FTP client.\nWould you like to install AndFTP from the Android Market?</string>
<string name="rate_download">Maximum download rate</string>
<string name="rate_upload">Maximum upload rate</string>
<string name="rate_inkbs">Only numeric values, in KB/s</string>
<string name="rate_reset">Reset</string>
<string name="rate_no_support">Your torrent client does not support setting of transfer rates or this is not yet implemented.</string>
<string name="rate_updated">Transfer rates updated</string>
<string name="askremove_title">Removing torrent</string>
<string name="askremove">Are you sure you want to remove this torrent?</string>
<string name="addfailed_title">Adding failed</string>
<string name="addfailed_service2">%1$s could not be added right now.\nWould you like to retry or queue it to automatically add it later?</string>
<string name="addfailed_noservice2">%1$s could not be added right now.\nWould you like to retry?</string>
<string name="addfailed_retry">Retry</string>
<string name="addfailed_addlater">Add later</string>
<string name="search">Search</string>
<string name="searching">Searching...</string>
<string name="dialog_search">Search on-line for torrents</string>
<string name="search_name">Torrents</string>
<string name="search_hint">Ubuntu</string>
<string name="search_resultsfrom">Results from</string>
<string name="add_selected">Add all selected</string>
<string name="no_results">No results found for your query</string>
<string name="no_query">No search query was provided</string>
<string name="searchmenu_switchsite">Switch site</string>
<string name="searchmenu_add">Download now</string>
<string name="searchmenu_details">Open website</string>
<string name="searchmenu_openwith">Open with...</string>
<string name="searchmenu_sharelink">Share link...</string>
<string name="searchmenu_savesearch">Save as RSS feed</string>
<string name="searchmenu_useassearch">Use as new search</string>
<string name="search_savedrssfeed">Search saved as RSS feed</string>
<string name="search_savenotsupported">Saving not supported for this site</string>
<string name="tts_not_found">Torrent Search is a separate module, to be installed from the website. Download and install it now?</string>
<string name="tts_install">Download and install</string>
<string name="preferences">Transdroid preferences</string>
<string name="add_new_server">Add new server</string>
<string name="add_new_website">Add web search site</string>
<string name="add_new_rssfeed">Add RSS feed</string>
<string name="inappsite">In-app searching</string>
<string name="websearch">Web-based searching</string>
<string name="other_settings">Other settings</string>
<string name="pref_server">Server daemon</string>
<string name="pref_basic">Basic settings</string>
<string name="pref_name">Name</string>
<string name="pref_name_info">Optional personal name</string>
<string name="pref_daemon">Server type</string>
<string name="pref_address">IP or domain name</string>
<string name="pref_address_info">Without http:// or port number</string>
<string name="pref_port">Port</string>
<string name="pref_port_info">Usually is </string>
<string name="pref_auth">Use authentication</string>
<string name="pref_auth_info">You\'ll need a username and password</string>
<string name="pref_user">Username</string>
<string name="pref_user_forhttp">Username for HTTP authentication</string>
<string name="pref_pass">Password</string>
<string name="pref_extrapass">Deluge web password</string>
<string name="pref_os">Server OS</string>
<string name="pref_folder">SCGI folder</string>
<string name="pref_folder_info">Usually is /RPC2</string>
<string name="pref_folder2">Folder</string>
<string name="pref_folder2_info">For example /torrentflux</string>
<string name="pref_folder3_info">Usually empty</string>
<string name="pref_advanced">Advanced settings (optional)</string>
<string name="pref_downloaddir">Downloads directory</string>
<string name="pref_downloaddir_info">The absolute path to the downloads directory on your server</string>
<string name="pref_ftpurl">Base (S)FTP url</string>
<string name="pref_ftpurl_info">For example ftp://me@server.com/downloads/</string>
<string name="pref_timeout">Connection timeout</string>
<string name="pref_timeout_info">Number of seconds before timing out a connection attempt</string>
<string name="pref_ssl">SSL</string>
<string name="pref_ssl_info">Select to use https</string>
<string name="pref_ssl_trust_key">Custom SSL thumbprint (SHA-1)</string>
<string name="pref_ssl_trust_key_info">Permit only connections to this specific certificate</string>
<string name="pref_ssl_trust_all">Accept all SSL certificates</string>
<string name="pref_ssl_trust_all_info">Select to allow connections from any thumbprint</string>
<string name="pref_search">Search engine</string>
<string name="pref_setdefault">Set default site</string>
<string name="pref_url">Direct search URL</string>
<string name="pref_url_info">%s will be replaced by the search query</string>
<string name="pref_numresults">Number of results</string>
<string name="pref_sort">Result sort order</string>
<string name="pref_rss_info">RSS feeds</string>
<string name="pref_feed">Feed settings</string>
<string name="pref_ezrss_showname">Show name</string>
<string name="pref_ezrss_quality">Quality</string>
<string name="pref_ezrss_group">Release group</string>
<string name="pref_ezrss_info2">Quality and release group are optional\nPowered by http://www.ezrss.it</string>
<string name="pref_ezrss_exact">exact match ↴</string>
<string name="pref_interface">Interface settings</string>
<string name="pref_onlytransferring">Only transferring (> 0KB/s)</string>
<string name="pref_onlytransferring_info">Show torrents running at 0KB/s as inactive</string>
<string name="pref_swipelabels">Swipe labels</string>
<string name="pref_swipelabels_info">Swipe between labels instead of servers</string>
<string name="pref_uirefresh">Refresh interval</string>
<string name="pref_hiderefresh">Hide refresh</string>
<string name="pref_hiderefresh_info">Don\'t show \'Torrent list refreshed\' message</string>
<string name="pref_askremove">Confirm removing</string>
<string name="pref_askremove_info">Ask to confirm the removal of a torrent</string>
<string name="file_off">Off</string>
<string name="file_low">Low</string>
<string name="file_normal">Normal</string>
<string name="file_high">High</string>
</resources>