<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:padding="10dip" >
	
	<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:textStyle="bold"
		android:text="@string/rate_download" />
		
	<EditText
		android:id="@+id/rate_download"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:inputType="numberSigned" />
		
	<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:textStyle="bold"
		android:text="@string/rate_upload" />
		
	<EditText
		android:id="@+id/rate_upload"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:inputType="numberSigned" />
		
	<TextView
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/rate_inkbs" />
		
</LinearLayout>
